kyverno/policies/audit/automount-service-account-token.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: automount-service-account-token
spec:
  validationFailureAction: Audit
  rules:
    - name: check-automount-token
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "ServiceAccount token không cần thiết nên tắt automount."
        pattern:
          spec:
            automountServiceAccountToken: false
